Fixed spacing of List Title on Web

--- a/src/components/List/index.scss
+++ b/src/components/List/index.scss
@@ -37,6 +37,10 @@
     margin-top: -60px;
   }
 
+  .List__Title {
+    margin-bottom: 15px;
+  }
+
   .List:hover {
     & .Show .Show__PlayButton {
       display: block;
